--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "ts-node": "^10.7.0",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "xlsx": "^0.18.5"
   }
 }
