--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Linkaynn/abf-formatter#readme",
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "@types/lodash.merge": "^4.6.6",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
@@ -37,6 +38,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "lodash.merge": "^4.6.2",
     "xlsx": "^0.18.5"
   }
 }
