--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Transforms your Anima Beyond Fantasy excel files to the Anima Beyond Foundry JSON in order to import inside your campaigns",
   "main": "build/index.js",
   "scripts": {
-    "start": "node build/index.ts",
-    "start:dev": "ts-node src/index.ts",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "jest"
   },
   "repository": {
@@ -27,11 +27,14 @@
     "@types/jest": "^27.4.1",
     "@types/lodash.merge": "^4.6.6",
     "@types/node": "^17.0.23",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
+    "react-app-rewired": "^2.2.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "tsc": "^2.0.4",
@@ -39,6 +42,21 @@
   },
   "dependencies": {
     "lodash.merge": "^4.6.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.0",
     "xlsx": "^0.18.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
