--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "lodash.merge": "^4.6.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "xlsx": "^0.18.5"
