--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "yarn build && gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
+    "gh-pages": "^3.2.3",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
     "react-app-rewired": "^2.2.1",
